-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.2
-
None
-
Archlinux, Qt5, X11
-
641b8d2b84896e277678307a3e7bbac9f64cff76
Qt does not set the WM_NAME property for window titles, only _NET_WM_NAME.
It seems it's not strictly required according to ICCCM/[EWMH|http://standards.freedesktop.org/wm-spec/wm-spec-1.3.html#idm140130317621408]:
Regarding WM_NAME:
The WM_NAME property is an uninterpreted string that the client wants the window manager to display in association with the window
Regarding _NET_WM_NAME:
The Client SHOULD set this to the title of the window in UTF-8 encoding. If set, the Window Manager should use this in preference to WM_NAME.
I also opened a discussion on the wm-spec-list@gnome.org list about this, where Martin Gräßlin said:
Qt 5's XCB backend doesn't support many "deprecated" features where there is a
EWMH replacement. For example it also doesn't support setting a window icon
through the WM_HINTS (ICCCM section 4.1.2.4) property. Given that I
interpreted this as a design decision to not support the "deprecated" hints in
the new implementation.
However, unfortunately not setting WM_NAME causes problems in the wild, for example:
- herbstluftwm (a window manager) not updating titles correctly.
- KeePassX (a password manager) not reading the titles correctly.
- Probably anything not implementing EWMH not reading the title correctly, which might affect some other minimal or older WMs.
I understand the argument of not maintaining "deprecated" things, but here it seems it really causes trouble at a lot of other places - of course I'll submit bug reports there as applicable as well.
- relates to
-
QTBUG-35541 Qt5 on X11 sets _NET_WM_NAME etc on all windows instead of only its own toplevels
-
- Open
-
-
QTBUG-21441 Solaris: QWidget::setWindowTitle() displays question marks for extended ascii characters
-
- Closed
-
-
QTBUG-44659 [Linux] With Window Maker miniaturised applications aren't displaying any window title
-
- Closed
-
-
QTBUG-39598 [Reg]: "as superuser" is shown as the window title if SUSE 11 is used
-
- Closed
-
-
QTBUG-40248 [REG 4 -> 5.3] Old versions of metacity+libgtop fail to read current user of Qt 5 applications causing (as superuser) to apper in window title
-
- Closed
-
- resulted in
-
QTBUG-92531 Memory leak in QXcbWindow
-
- Open
-
| For Gerrit Dashboard: QTBUG-42209 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 107853,8 | xcb: set WM_NAME window property | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |