Update titles correctly for clients without WM_NAME.

This fixes updating of titles for clients which only have _NET_WM_NAME set, but
not WM_NAME, e.g. everything using Qt5.

Related issues and discussion:

https://github.com/herbstluftwm/herbstluftwm/issues/35
https://bugreports.qt-project.org/browse/QTBUG-42209
https://mail.gnome.org/archives/wm-spec-list/2014-October/msg00000.html

Fixes #35.